<resources>
    <string name="app_name">NewsApp2</string>
    <string name="_floating_button">floating_button</string>
    <string name="imageview">imageview</string>
    <string name="Highlight">Contact Lost With Sriwijaya Air Boeing 737-500 After Take Off</string>
    <string name="xoxochery">Xoxochery</string>
    <string name="_date">10 Jan, 2021</string>
    <string name="dummy_detail">A search is underway after suspected debris from an Indonesian Sriwijaya Air flight was found hours after the plane went missing. The plane lost contact after taking off from Indonesian capital Jakarta on Saturday en route to the city of Pontianak in West Kalimantan province. The Boeing 737-500 flight was carrying 62 people.The 50 passengers included seven children and three babies.</string>
    <string name="email">Email</string>
    <string name="sub_forgot">Please fill the input below here</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="imagebutton">imagebutton</string>
    <string name="breaking_news">Breaking News</string>
    <string name="media">Media</string>
    <string name="international">International</string>
    <string name="all">All</string>
    <string name="business">Business</string>
    <string name="magazine">Magazine</string>
    <string name="coronavirus_update">Coronavirus Update</string>
    <string name="_31_01_2021">31 01 2021</string>
    <string name="login">Login</string>
    <string name="sub_login">Please Sign In to continue</string>
    <string name="_password">Password</string>
    <string name="dont_have_a_account">dont have a account</string>
    <string name="_register">Register</string>
    <string name="create_account">Create Account</string>
    <string name="please_fill_the_input_below_here">please fill the input below here</string>
    <string name="full_name">Full Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_a_account">already have a account</string>
    <string name="name_user">Sarah sabila Dhalimunthe</string>
    <string name="email_user">sarahsabil@gmail.com</string>
    <string name="preference">Preference</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="text_user">Users</string>
    <string name="error_text">Not empty</string>
    <string name="error_pass">Password Mismatch</string>
    <string name="notifications">Notifications</string>
    <string name="account">Account</string>
    <string name="edit_account">Edit Account</string>
    <string name="change_account">Change Account</string>
    <string name="language">Language</string>
    <string name="bookmark">Bookmark</string>
    <string name="settings">Settings</string>
    <string name="privacy_and_setting_help">Privacy and Setting Help</string>
    <string name="logout">Logout</string>
</resources>