<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/cl_main">
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iv_profile_main"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:src="@drawable/ic_baseline_account_circle_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <TextView
            android:id="@+id/tv_date_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/_date"
            app:layout_constraintBottom_toBottomOf="@+id/iv_profile_main"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/iv_profile_main"
            app:layout_constraintTop_toTopOf="@+id/iv_profile_main"
            app:layout_constraintVertical_bias="0.58" />

        <ImageButton
            android:id="@+id/ib_profile_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:background="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/tv_date_main"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/tv_date_main"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"
            app:srcCompat="@drawable/ic_baseline_search_24"
            android:contentDescription="@string/imagebutton" />
        <TextView
            android:id="@+id/tv_title_lable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16dp"
            android:layout_marginTop="@dimen/_24dp"
            android:text="@string/breaking_news"
            android:textSize="36sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_date_main"
            tools:textColor="@color/color_font" />

        <androidx.cardview.widget.CardView
            android:id="@+id/card_main"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:elevation="@dimen/_16dp"
            app:cardElevation="@dimen/_16dp"
            app:cardCornerRadius="@dimen/_20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_title_lable">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <androidx.cardview.widget.CardView
                    android:id="@+id/card_image"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_200dp"
                    app:cardCornerRadius="@dimen/_20dp">

                    <ImageView
                        android:id="@+id/iv_highlight"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/white"
                        android:contentDescription="@string/imageview"
                        android:scaleType="centerCrop"
                        android:src="@drawable/mainbanner" />
                </androidx.cardview.widget.CardView>
                <TextView
                    android:id="@+id/tv_highlight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Highlight"
                    android:layout_below="@id/card_image"
                    android:layout_marginStart="@dimen/_16dp"
                    android:layout_marginEnd="@dimen/_16dp"
                    android:layout_marginTop="@dimen/_8dp"
                    android:maxLines="2"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"/>
                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/iv_author_main"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="@dimen/_16dp"
                    android:layout_marginTop="@dimen/_8dp"
                    android:layout_marginEnd="@dimen/_16dp"
                    android:src="@drawable/ic_baseline_account_circle_24"
                    android:layout_below="@id/tv_highlight" />
                <TextView
                    android:id="@+id/tv_name_author"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/xoxochery"
                    android:layout_below="@id/tv_highlight"
                    android:layout_toEndOf="@id/iv_author_main"
                    android:layout_marginTop="@dimen/_16dp"/>
                <TextView
                    android:id="@+id/tv_date_highlight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/_date"
                    android:maxWidth="75dp"
                    android:layout_alignParentEnd="true"
                    android:layout_below="@id/tv_highlight"
                    android:layout_marginTop="@dimen/_16dp"
                    android:layout_marginBottom="@dimen/_16dp"
                    android:layout_marginEnd="@dimen/_16dp"/>
            </RelativeLayout>
        </androidx.cardview.widget.CardView>
        <HorizontalScrollView
            android:id="@+id/hs_topic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/card_main">
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent">
                <TextView
                    android:id="@+id/tv_all"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/all"
                    android:layout_marginStart="@dimen/_16dp"
                    android:layout_marginTop="@dimen/_16dp"
                    android:layout_marginEnd="1dp"
                    android:layout_marginBottom="@dimen/_8dp"
                    android:textSize="18sp"/>
                <TextView
                    android:id="@+id/tv_international"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/international"
                    android:layout_marginStart="@dimen/_16dp"
                    android:layout_marginTop="@dimen/_16dp"
                    android:layout_marginEnd="1dp"
                    android:layout_marginBottom="@dimen/_8dp"
                    android:layout_toEndOf="@id/tv_all"
                    android:textSize="18sp"/>
                <TextView
                    android:id="@+id/tv_media"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/media"
                    android:layout_marginStart="@dimen/_16dp"
                    android:layout_marginTop="@dimen/_16dp"
                    android:layout_marginEnd="1dp"
                    android:layout_marginBottom="@dimen/_8dp"
                    android:layout_toEndOf="@id/tv_international"
                    android:textSize="18sp"/>
                <TextView
                    android:id="@+id/tv_magazine"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/magazine"
                    android:layout_marginStart="@dimen/_16dp"
                    android:layout_marginTop="@dimen/_16dp"
                    android:layout_marginEnd="1dp"
                    android:layout_marginBottom="@dimen/_8dp"
                    android:layout_toEndOf="@id/tv_media"
                    android:textSize="18sp"/>
                <TextView
                    android:id="@+id/tv_business"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/business"
                    android:layout_marginStart="@dimen/_16dp"
                    android:layout_marginTop="@dimen/_16dp"
                    android:layout_marginEnd="1dp"
                    android:layout_marginBottom="@dimen/_8dp"
                    android:layout_toEndOf="@id/tv_magazine"
                    android:textSize="18sp"/>
            </RelativeLayout>
        </HorizontalScrollView>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_main"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="@dimen/_20dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/hs_topic"
            tools:listitem="@layout/activity_news_item"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>